[package]
name = "ahjoor-escrow"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { workspace = true }
ahjoor-token-whitelist = { path = "../ahjoor-token-whitelist" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
proptest = "1"

[lib]
crate-type = ["cdylib"]
