[package]
name = "ahjoor-refund"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { workspace = true }
ahjoor-token-whitelist = { path = "../ahjoor-token-whitelist" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
ahjoor-payments = { path = "../ahjoor-payments" }
ahjoor-token-whitelist = { path = "../ahjoor-token-whitelist" }
proptest = "1"

[lib]
crate-type = ["cdylib"]
